# webfetch-cli

./: README.md  SKILL.md  pyproject.toml
tests/: test_cli.py
webfetch_cli/: __init__.py  cli.py
webfetch_cli/agent_skill/: SKILL.md
